--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.18",
     "multer": "^1.4.2",
+    "pidcrypt": "^0.0.32",
     "socket.io": "^3.0.3",
     "text-to-image": "^4.0.0",
     "validator": "^13.5.1"
