--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.10.18",
     "multer": "^1.4.2",
     "pidcrypt": "^0.0.32",
+    "sharp": "^0.28.2",
     "socket.io": "^3.0.3",
     "text-to-image": "^4.0.0",
     "validator": "^13.5.1"
